<resources>
    <string name="app_name">CrimeGuardian</string>
    <string name="assault">assault</string>
    <string name="text_crime_1">There was a brutal murder</string>

    <string name="text_crime_2">Almaty police reported a 34% drop in crime rates</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="extra_call">extra call</string>
    <string name="text_call">Рhone number of a trusted person</string>
    <string name="contact_name">Арай Уали</string>
    <string name="phone_number">+77087377737</string>
    <string name="theft">Theft</string>
    <string name="burglary">Burglary</string>
    <string name="text_crime_3">A man wanted for murder shot and killed a man in Almaty</string>
    <string name="text_crime_4">\nAlmaty police found a stolen SUV</string>
    <string name="search_for_an_address">Search for an address</string>
    <string name="response_geojson">response.geojson</string>
    <string name="source">source</string>
    <string name="author">author</string>
    <string name="breaking_news">Breaking News</string>
    <string name="latest_news">Latest News</string>
    <string name="news">news</string>
    <string name="hello_amir_alimbekerov">Hello, Amir Alimbekerov\n</string>
    <string name="amiralimbayevo_gmail_com">amiralimbekerov@gmail.com</string>
    <string name="nurislam_assan">Nurislam Assan</string>
    <string name="login">Login</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="type_password">Type password</string>
    <string name="re_type_password">Re-type password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="privacy"><![CDATA[I accept Privacy policy & Terms and Conditions]]></string>
    <string name="upload_picture">Upload Picture</string>
    <string name="already_have_account_login">Already have account Login</string>
    <string name="skip">Skip</string>
    <string name="privacy_statement">Privacy statement</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_password">Enter password</string>
    <string name="stay_me_login">Stay me login</string>
    <string name="instruction">Instruction</string>
    <string name="sample_mail_com">Sample@mail.com</string>
    <string name="privacy_statement_text">CrimeGuardian not only displays crime data but also provides news articles related to incidents, giving you a comprehensive view of the safety landscape, our SOS call feature ensures that help is just a tap away in case of emergencies.</string>
    <string name="find_things_to_do">find things to do</string>
    <string name="map">Map</string>
    <string name="article">Article</string>
    <string name="news_icon">News</string>
    <string name="ai">AI</string>
    <string name="instructions">Instructions</string>
    <string name="sos">SOS</string>
    <string name="districts_of_almaty">Districts of Almaty</string>
    <string name="medeu_district">Medeu District</string>
    <string name="almaly_district">Almaly District</string>
    <string name="alatau_district">Alatau District</string>
    <string name="auezov_district">Auezov District</string>
    <string name="bostandyk_district">Bostandyk District</string>
    <string name="turksib_district">Turksib District</string>

    <string name="almaty">Almaty</string>

    <string name="map_desc">The map button shows you which area you are in for crimes.
        This helps you quickly recognize which position you are in.
        You can also find out the exact point where and in which area the attacks occurred how many times.
        This will save time to quickly explore the locations.</string>

    <string name="news_desc">The news button will help you find out the latest news in the field of crime.
        You can also find additional information materials from the feed there.
        Also, access to the feed will help you further explore some articles.</string>

    <string name="sos_desc">An "SOS" button is essential for emergencies because it offers a fast way to call for help when in danger.
        It\'s useful in various situations like hiking or traveling where immediate assistance might be needed.
        Having an SOS button can bring peace of mind, especially for vulnerable individuals. </string>

    <string name="profile_desc">The profile section in an app serves immediate needs, enabling
        users to personalize their experience, manage data securely, control communication preferences, and access support.
        It\'s vital for user engagement and satisfaction, providing a seamless and personalized experience while addressing concerns promptly.</string>

    <string name="ai_desc">AI is indispensable for numerous reasons.
        It automates tasks, offers insights from data, tailors experiences, drives innovation, manages risks,
        transforms healthcare, improves customer service, and aids environmental sustainability.</string>

    <string name="medeu_district_url">https://krisha.kz/content/news/2016/nazvany-samye-kriminogennye-uchastki-medeuskogo-rayona</string>
    <string name="almaly_district_url">https://krisha.kz/kz/content/news/2019/opredeleny-samye-kriminal-nye-mesta-almalinskogo-rayona</string>
    <string name="alatau_district_url">https://www.inform.kz/ru/naibolee-opasnye-mesta-v-alatauskom-rayone-almaty-nazvala-policiya_a3556921</string>
    <string name="auezov_district_url">https://www.inform.kz/ru/kolichestvo-prestupleniy-v-samom-gustonaselennom-rayone-almaty-za-proshedshie-11-mesyacev-snizilos-s-35-do-19_a2219024</string>
    <string name="bostandyk_district_url">https://mail.kz/ru/news/kz-news/v-bostandykskom-raione-almaty-snizilos-kolichestvo-prestuplenii</string>
    <string name="turksib_district_url">https://tengrinews.kz/kazakhstan_news/nazvanyi-samyie-opasnyie-ulitsyi-turksibskogo-rayona-almatyi-376563/</string>
</resources>
